2019-09-02  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.0-1
