@@ -1,8 +1,8 @@
 Package: plotseries
 Type: Package
 Title: Time-Series Plots
-Version: 0.0-1
-Date: 2019-09-04
+Version: 0.1-0
+Date: 2019-09-11
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person("Enrico", "Schumann",
                   role  = c("aut", "cre"),
