@@ -1,4 +1,8 @@
+2019-09-11  Enrico Schumann  <es@enricoschumann.net>
+
+        * DESCRIPTION (Version): 0.1-0
+
 2019-09-02  Enrico Schumann  <es@enricoschumann.net>
 
-	* DESCRIPTION (Version): 0.0-1
+        * DESCRIPTION (Version): 0.0-1
 
